// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineViewer component passes expected props 1`] = `
<EuiPage
  restrictWidth={false}
>
  <EuiPageBody
    restrictWidth={false}
  >
    <EuiPageContent
      className="monPipelineViewer"
      horizontalPosition="center"
      panelPaddingSize="l"
      verticalPosition="center"
    >
      <StatementSection
        detailVertex={null}
        elements={
          Array [
            Object {
              "depth": 0,
              "id": "standardInput",
              "parentId": null,
            },
          ]
        }
        headingText="Inputs"
        iconType="logstashInput"
        onShowVertexDetails={[Function]}
      />
      <EuiSpacer
        size="l"
      />
      <Queue
        queue={
          Object {
            "hasExplicitId": false,
            "id": "__QUEUE__",
            "meta": null,
            "stats": Array [],
          }
        }
      />
      <EuiSpacer
        size="l"
      />
      <StatementSection
        detailVertex={null}
        elements={
          Array [
            Object {
              "depth": 0,
              "id": "mutate",
              "parentId": null,
            },
          ]
        }
        headingText="Filters"
        iconType="logstashFilter"
        onShowVertexDetails={[Function]}
      />
      <EuiSpacer
        size="l"
      />
      <StatementSection
        detailVertex={null}
        elements={
          Array [
            Object {
              "depth": 0,
              "id": "elasticsearch",
              "parentId": null,
            },
          ]
        }
        headingText="Outputs"
        iconType="logstashOutput"
        onShowVertexDetails={[Function]}
      />
    </EuiPageContent>
  </EuiPageBody>
</EuiPage>
`;

exports[`PipelineViewer component renders DetailDrawer when selected vertex is not null 1`] = `
<EuiPage
  restrictWidth={false}
>
  <EuiPageBody
    restrictWidth={false}
  >
    <EuiPageContent
      className="monPipelineViewer"
      horizontalPosition="center"
      panelPaddingSize="l"
      verticalPosition="center"
    >
      <StatementSection
        detailVertex={
          Object {
            "id": "stdin",
          }
        }
        elements={
          Array [
            Object {
              "depth": 0,
              "id": "standardInput",
              "parentId": null,
            },
          ]
        }
        headingText="Inputs"
        iconType="logstashInput"
        onShowVertexDetails={[Function]}
      />
      <EuiSpacer
        size="l"
      />
      <Queue
        queue={
          Object {
            "hasExplicitId": false,
            "id": "__QUEUE__",
            "meta": null,
            "stats": Array [],
          }
        }
      />
      <EuiSpacer
        size="l"
      />
      <StatementSection
        detailVertex={
          Object {
            "id": "stdin",
          }
        }
        elements={
          Array [
            Object {
              "depth": 0,
              "id": "mutate",
              "parentId": null,
            },
          ]
        }
        headingText="Filters"
        iconType="logstashFilter"
        onShowVertexDetails={[Function]}
      />
      <EuiSpacer
        size="l"
      />
      <StatementSection
        detailVertex={
          Object {
            "id": "stdin",
          }
        }
        elements={
          Array [
            Object {
              "depth": 0,
              "id": "elasticsearch",
              "parentId": null,
            },
          ]
        }
        headingText="Outputs"
        iconType="logstashOutput"
        onShowVertexDetails={[Function]}
      />
      <DetailDrawer
        onHide={[Function]}
        vertex={
          Object {
            "id": "stdin",
          }
        }
      />
    </EuiPageContent>
  </EuiPageBody>
</EuiPage>
`;
